Try to protect against CSS spill

--- a/app/assets/extractor.css
+++ b/app/assets/extractor.css
@@ -1,14 +1,6 @@
 /* Nested CSS may not be supported by renderer yet */
 
-.h5p-iframe * {
-  all: initial;
-}
-
-.h5p-iframe *::before {
-  all: initial;
-}
-
-.h5p-iframe *::after {
+.h5p-extractor * {
   all: initial;
 }
 
